--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/order_Service
 spring.datasource.username=root
 spring.datasource.password=Kanesw@22
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port=8082
+server.port=8084
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.application.name=order-service
