--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/product-service
-server.port=8081
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.application.name=product-service
